[package]
authors = ["Guillem Cordoba <guillem.cordoba@gmail.com>"]
edition = "2018"
name = "bundle_dna"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

fixturators = ["holochain_zome_types/fixturators"]
test_utils = ["holochain_zome_types/test_utils"]

[dependencies]
anyhow = "1.0.26"
async-trait = "0.1"
backtrace = "0.3.27"
base64 = "0.10.1"
chrono = "0.4.6"
derive_builder = "0.9.0"
derive_more = "0.99.3"
fixt = {git = "https://github.com/holochain/holochain", rev = "fd8049a", package = "fixt"}
flate2 = "1.0.14"
futures = "0.3"
holo_hash = {git = "https://github.com/holochain/holochain", rev = "fd8049a", package = "holo_hash", features = ["hashing"]}
holochain_serialized_bytes = "=0.0.48"
holochain_zome_types = {git = "https://github.com/holochain/holochain", rev = "fd8049a", package = "holochain_zome_types"}
js-sys = "0.3.46"
lazy_static = "1.4.0"
must_future = "0.1.1"
nanoid = "0.3"
observability = "0.1.3"
rand = "0.7"
regex = "1.1.2"
serde = {version = "1.0.104", features = ["derive", "rc"]}
serde_bytes = "0.11"
serde_derive = "1.0.104"
serde_json = {version = "1.0.51", features = ["preserve_order"]}
shrinkwraprs = "0.3.0"
strum = "0.18.0"
tempdir = "0.3.7"
thiserror = "1.0.22"
tracing = "=0.1.21"
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.19"
tokio = {version = "0.2", features = ["blocking"]}
tokio_safe_block_on = "0.1.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
maplit = "1"
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
